--- a/style.css
+++ b/style.css
@@ -1,13 +1,8 @@
 
 body {
-  /*min-width: 200px;
-  max-width: 640px;*/
-  /*display: flex;
-  justify-content: center;*/
   background-image: url("images/campsite-tent-night.jpg");
   background-repeat: no-repeat;
   background-attachment: scroll;
-  /*background-size: cover;*/
   background-size: contain;
   background-color: #333333;
   color: #ffffff;
@@ -15,43 +10,17 @@ body {
 
 }
 
-/*#opacitytest {
-  background-color: orange;
-  opacity: 0.6;
-  position: absolute;
-  top: 230px;
-  width: 800px;
-  height: 4000px;
-  margin: auto;
-  min-width: 200px;
-  max-width: 800px;
-  display: flex;
-  justify-content: space-around;
-  margin: auto;
-  z-index: 0;
-}*/
-
-/*img.bg {
-min-height: 100%;
-min-width: 1024px;
-width: 100%;
-height: auto;
-position: fixed;
-top: 0;
-left: 0;
-}*/
-
 main {
   min-width: 200px;
   max-width: 800px;
   display: flex;
-  /*justify-content: center;*/
   flex-direction: column;
   margin: auto; /* this is what is keeping everything centered, why? */
 }
 
 #maininfo {
   background:url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAJklEQVQYV2M0Njb+f/bsWUZCNCMDAwMDIUUgeYImwQwZNRFvUAEAsOW8A5HBcJkAAAAASUVORK5CYII=) repeat;
+  padding: 20px 10px 100px 20px;
 }
 
 h1 {
@@ -60,10 +29,6 @@ h1 {
   font-size: 655%;
   color: #ffffff;
   font-weight: normal;
-  /*width: 100%;*/
-  /*font-size: 6vw;*/
-  /*opacity: 0.5;*/
-  /*background-color: white;*/
 }
 
 h2 {
@@ -78,20 +43,25 @@ h3 {
   font-size: 200%;
   color: #ffffff;
   font-weight: normal;
+  padding: 0px;
+  margin: 10
 }
 
 footer {
   display: flex;
   justify-content: center;
   margin: 50px 0px;
+  font-size: 80%;
 }
 
 a:link {
   color: #999999;
+  text-decoration: none;
 }
 
 a:visited {
   color: #999999;
+  text-decoration: none;
 }
 
 a:hover {
@@ -101,39 +71,78 @@ a:hover {
 
 a:active {
   color: #ffd633;
+  text-decoration: none;
 }
 
 #maininfo {
   display: flex;
   justify-content: space-between;
-  /*background-color: #666666;*/
+  align-items: flex-start;
+  /* the following creates a transparent background image for the element to allow white text to be more readable */
+  background:url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAJklEQVQYV2M0Njb+f/bsWUZCNCMDAwMDIUUgeYImwQwZNRFvUAEAsOW8A5HBcJkAAAAASUVORK5CYII=) repeat;
 }
 
-#aboutus {
+/*change to class*/
+
+.about {
   display: flex;
   justify-content: space-between;
-  /*background-color: #555555;*/
+  background:url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAJklEQVQYV2M0Njb+f/bsWUZCNCMDAwMDIUUgeYImwQwZNRFvUAEAsOW8A5HBcJkAAAAASUVORK5CYII=) repeat;
+}
+
+.abouttext {
+  width: 50%;
+}
+
+.blog {
+  display: flex;
+  justify-content: space-between;
+  background:url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAJklEQVQYV2M0Njb+f/bsWUZCNCMDAwMDIUUgeYImwQwZNRFvUAEAsOW8A5HBcJkAAAAASUVORK5CYII=) repeat;
+}
+
+.blogtext {
+  width: 50%;
+}
+
+.blogtimestamp {
+  font-size: 90%;
+  color: #999999;
+}
+
+/*#aboutus {
+  display: flex;
+  justify-content: space-between;
+  background:url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAJklEQVQYV2M0Njb+f/bsWUZCNCMDAwMDIUUgeYImwQwZNRFvUAEAsOW8A5HBcJkAAAAASUVORK5CYII=) repeat;
 }
 
 #aboutcoffee {
   display: flex;
   justify-content: space-between;
-  /*background-color: #666666;*/
-}
-
-#blog {
-  /*display: flex;
-  justify-content: space-between;*/
-  /*background-color: #555555;*/
+  background:url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAJklEQVQYV2M0Njb+f/bsWUZCNCMDAwMDIUUgeYImwQwZNRFvUAEAsOW8A5HBcJkAAAAASUVORK5CYII=) repeat;
 }
 
 #blogcontent {
   display: flex;
   justify-content: space-between;
+}*/
+
+table {
+  /* style for the public page locations & hours */
+  /*margin: 10px 10px 40px 10px;*/
+  font-size: 150%;
 }
 
-#locationshourstable {
-  /* style for the public page locations & hours */
+th, td {
+  padding: 0px 30px 15px 0px;
+}
+
+th {
+  text-transform: uppercase;
+  text-align: left;
+  color: #999999;
+}
+
+td {
 }
 
 #socialmedia {
@@ -142,20 +151,13 @@ a:active {
   justify-content: flex-end;
 }
 
-/*#socialmedia>img {
-  width: 100px;
-}*/
-
 .socialimg {
-  width: 50px;
+  width: 80px;
+  margin: 10px;
 }
 
 .imagecontainer {
   width: 50%
-}
-
-.about {
-  width: 50%;
 }
 
 .photograph {
@@ -164,43 +166,4 @@ a:active {
 
 .more {
 
-}
-
-/*#aboutusimg {
-  width: 100%;
-}*/
-
-/*#aboutcoffeeimg {
-  width: 100%;
-}*/
-
-/*#blogimage {
-  width: 100%;
-}*/
-
-/*#aboutuscontainer {
-
-}*/
-
-/*#aboutcoffeecontainer {
-
-}*/
-
-/*.blogpost {
-
-}*/
-
-
-div.transpbox {
-  margin: 30px;
-  background-color: #ffffff;
-  border: 1px solid black;
-  opacity: 0.6;
-  filter: alpha(opacity=60); /* For IE8 and earlier */
-}
-
-div.transpbox p {
-  margin: 5%;
-  font-weight: bold;
-  color: #000000;
 }
