--- a/style.css
+++ b/style.css
@@ -7,7 +7,8 @@ body {
   background-color: #333333;
   color: #ffffff;
   font-family: 'Oswald', sans-serif;
-
+  margin: 0px;
+  padding: 0px;
 }
 
 main {
@@ -48,10 +49,20 @@ h3 {
 }
 
 footer {
-  display: flex;
-  justify-content: center;
-  margin: 50px 0px;
+  all: default;
+  /*display: flex;*/
+  /*justify-content: center;*/
+  text-align: center;
+  margin: 0px;
+  padding: 30px 0px;
   font-size: 80%;
+  width: 100%;
+  background-image: url("images/campsite-tent-night.jpg");
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+  /*background-size: contain;*/
+  background-size: cover;
+  background-color: #999999;
 }
 
 a:link {
