--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 
 body {
-  background-image: url("images/campsite-tent-night.jpg");
+  /*background-image: url("images/campsite-tent-night.jpg");
   background-repeat: no-repeat;
   background-attachment: scroll;
-  background-size: contain;
+  background-size: contain;*/
   background-color: #333333;
   color: #ffffff;
   font-family: 'Oswald', sans-serif;
@@ -21,6 +21,22 @@ main {
   /* the below does not center the main part of the page, why?*/
   /*justify-content: center;*/
   /*justify-content: space-around;*/
+}
+
+footer {
+  display: flex;
+  align-self: flex-end;
+  justify-content: center;
+  text-align: center;
+  margin: 0px;
+  padding: 30px 0px;
+  font-size: 80%;
+  width: 100%;
+  background-image: url("images/campsite-tent-night.jpg");
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+  /*background-size: contain;*/
+  background-size: cover;
 }
 
 h1 {
@@ -48,19 +64,6 @@ h3 {
   font-weight: normal;
   margin: 0px;
   padding: 0px;
-}
-
-footer {
-  text-align: center;
-  margin: 0px;
-  padding: 30px 0px;
-  font-size: 80%;
-  width: 100%;
-  background-image: url("images/campsite-tent-night.jpg");
-  background-repeat: no-repeat;
-  background-attachment: scroll;
-  /*background-size: contain;*/
-  background-size: cover;
 }
 
 h2 a {
@@ -112,6 +115,25 @@ th {
 
 td {
 }
+
+#bgcampcontainer {
+    background-image: url("images/campsite-tent-night.jpg");
+    background-repeat: no-repeat;
+    background-attachment: scroll;
+    /*background-size: contain;*/
+    background-size: cover;
+    background-color: #333333;
+    margin: 0px;
+    padding: 0px;
+    max-height: 630px;
+    width: 100%;
+}
+
+/*#bgcampcontainer>img {
+  width: 100%;
+  max-height: none;
+  display: none;
+}*/
 
 #maininfo {
   display: flex;
@@ -186,4 +208,10 @@ td {
 /* sets the width of the photograph to take up the whole container */
 .photograph {
   width: 100%;
+}
+
+#styleinfo {
+  display: block;
+  width: 300;
+  margin: auto;
 }
